--- a/map/index.html
+++ b/map/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
 	<frameset rows="100%">
-		<frame src="http://map.sogdream.top:29999/map/">
+		<frame src="https://map.sogdream.top:29999">
 			<noframes>
-				<a href="http://map.sogdream.top:29999/map/">Click here</a>
+				<a href="https://map.sogdream.top:29999">Click here</a>
 			</noframes>
 		</frameset>
-		</html>
+</html>
