--- a/map/index.html
+++ b/map/index.html
@@ -1,4 +1,7 @@
 <!doctype html>
+  <head>
+    <title>SoGDream World Map</title>
+  </head>
 <html>
 	<frameset rows="100%">
 		<frame src="https://map.sogdream.top:29999">
