--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="shortcuticon" href="static/image/favicon.ico" />
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>SoGDream - 国内最垃圾的生电服务器丨我的世界服务器丨Minecraft服务器丨Minecraft生电服丨我的世界生电服</title>
