--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@ em {letter-spacing:2px}
     </div>
     </div>
     </div>
+    <a href="https://icp.gov.moe/?keyword=20218003" target="_blank">萌ICP备20218003号</a>
     <div class="copyright">
     <div class="container">
     友情链接:
