add friend line1

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@ em {letter-spacing:2px}
     <div class="container">
     友情链接:
     <a href="friends.html" target="_blank">你可以投友链哦</a>
+    <a href="https://msdnicrosoft.cn/" target="_blank">MSDNicrosoft's Blog</a>
     <br>
     <strong>SunshineTown Networks</strong> &copy; 2019-2021. All rights reserved
     <br>
