--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="shortcuticon" href="static/image/favicon.ico" />
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<link rel="bookmark" type="static/image/" href="static/image/favicon.ico"/>
+<link rel="icon" type="static/image/" sizes="" href="static/image/favicon.ico" />
 <title>SoGDream - 国内最垃圾的生电服务器丨我的世界服务器丨Minecraft服务器丨Minecraft生电服丨我的世界生电服</title>
     <meta name="description" content="我的世界SoGDream服务器全称SkyOfGoldDream,服务器最大限度遵循原版，服内玩家严禁使用作弊插件,在此条件下，服务器内玩家均为原版游戏下的菜鸡（确信）。" />
 <meta name="shenma-site-verification" content="b25ca3e0d09d8cb702a6b915a2538af3_1607936916">
