--- a/joinus.html
+++ b/joinus.html
@@ -155,7 +155,7 @@ h3 {letter-spacing:2px}
     <div class="wrapper" style="background-image:url('static/image/banner-bakg.jpg')">
     <div class="social">
     <div class="container">
-    <h3>查看<strong>我们</strong>的公众账号</h3>
+        <h3>查看<strong>我们</strong>的公众账号</h3>
     <div class="social-icons">
     <div class="social-icon">
       <a href="https://space.bilibili.com/642385033">
@@ -176,8 +176,11 @@ h3 {letter-spacing:2px}
     <div class="container">
     友情链接:
     <a href="friends.html" target="_blank">你可以投友链哦</a>
+    <a href="https://msdnicrosoft.cn/" target="_blank">MSDNicrosoft's Blog</a>
     <br>
     <strong>SunshineTown Networks</strong> &copy; 2019-2021. All rights reserved
+    <br>
+    <a href="https://icp.gov.moe/?keyword=20218003" target="_blank">萌ICP备20218003号</a>
     </div>
     </div>
     </div>
